add service  account  to the  deployment

--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -1,4 +1,11 @@
-#deplyment.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: aviator-service-account
+  namespace: default
+  annotations:
+    azure.workload.identity/client-id: "a58e6bd1-f10e-4cd6-bd86-9aa8f641e5a3" #
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,16 +21,19 @@ spec:
     metadata:
       labels:
         app: aviator
+        # This label is CRITICAL to trigger the token injection
+        azure.workload.identity/use: "true"
     spec:
+      # This links the pod to the federated trust we built
+      serviceAccountName: aviator-service-account
       containers:
       - name: dashboard
         image: aviatoracr.azurecr.io/aviator-app:v1
         ports:
         - containerPort: 5000
-        # This environment variable tells the Python app which identity to use
         env:
         - name: AZURE_CLIENT_ID
-          value: "a58e6bd1-f10e-4cd6-bd86-9aa8f641e5a3" # Extracted from your Entra Admin ID
+          value: "a58e6bd1-f10e-4cd6-bd86-9aa8f641e5a3" #
       imagePullSecrets:
       - name: acr-secret
 ---
