--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -1,12 +1,4 @@
-apiVersion: v1  # KEEP THIS AS v1 (This is for Kubernetes)
-kind: ServiceAccount
-metadata:
-  name: aviator-service-account
-  namespace: default
-  annotations:
-    azure.workload.identity/client-id: "a58e6bd1-f10e-4cd6-bd86-9aa8f641e5a3" 
----
-apiVersion: apps/v1 # KEEP THIS AS apps/v1 (This is for Kubernetes)
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: aviator-dashboard
@@ -21,29 +13,26 @@ spec:
     metadata:
       labels:
         app: aviator
-        azure.workload.identity/use: "true" 
+        # REMOVED: azure.workload.identity/use: "true"
     spec:
-      serviceAccountName: aviator-service-account
       containers:
-      - name: dashboard
-        # THIS IS THE ONLY v. YOU CHANGE: Your app version
-        image: aviatoracr.azurecr.io/aviator-app:v5 
+      - name: aviator-container
+        image: aviatoracr.azurecr.io/aviator-app:v6 # Pointing to your new 'v6' strategy
         ports:
         - containerPort: 5000
         env:
         - name: AZURE_CLIENT_ID
-          value: "a58e6bd1-f10e-4cd6-bd86-9aa8f641e5a3"
-      imagePullSecrets:
-      - name: acr-secret
+          value: "a58e6bd1-f10e-4cd6-bd86-9aa8f641e5a3" # Your Managed Identity Client ID
 ---
-apiVersion: v1 # KEEP THIS AS v1 (This is for Kubernetes)
+apiVersion: v1
 kind: Service
 metadata:
   name: aviator-service
 spec:
   type: LoadBalancer
-  ports:
-  - port: 80
-    targetPort: 5000
   selector:
     app: aviator
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
